# reasoning_grounding

./: .env.example  README.md  accelerate_config.yaml  eval_4b_results.jsonl  eval_9b_results.jsonl  eval_local_qwen.py  eval_lora_results.jsonl  eval_screenspot.py  eval_validation.py  metrics.py  pyproject.toml  requirements.txt  split_eval.jsonl  train_results.jsonl  train_sft_qwen.py  upload_to_hf.py  val_results.jsonl
config/: __init__.py  datasets.py  defaults.py  models.py  prompts.py
data/: __init__.py  loader.py  sample.py
eval/: __init__.py  client.py  passes.py  runner.py
inference/: __init__.py  image.py  predict.py
